--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials"/>
-    <script src="./registerServiceWorker.js"></script>
+    <script src="../src/registerServiceWorker.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
